# recheck

./: .cursorrules  .gitignore  .pre-commit-config.yaml  Makefile  mkdocs.yml  pyproject.toml  requirements.dev.txt  requirements.docs.txt  requirements.txt  ruff.toml  setup.cfg
.github/: FUNDING.yml
.github/workflows/: pythonpackage.yml  pythonpublish.yml
docs/: api-reference.md  api.md  changelog.md  cli.md  complexity.md  configuration.md  contributing.md  getting-started.md  how-it-works.md  index.md  installation.md  nginx-usage.md  redos-explained.md  safe-patterns.md  source-scanning.md  vulnerable-patterns.md
docs/css/: extra.css
docs/overrides/: main.html
includes/: abbreviations.md
scripts/: check_py36_compat.py
src/recheck/: __init__.py  checker.py  cli.py  config.py  exceptions.py
src/recheck/automaton/: __init__.py  checker.py  complexity_analyzer.py  eps_nfa.py  eps_nfa_builder.py  ordered_nfa.py  witness.py
src/recheck/diagnostics/: __init__.py  diagnostics.py
src/recheck/fuzz/: __init__.py  checker.py  mutators.py  seeder.py
src/recheck/integrations/: __init__.py  source_scanner.py
src/recheck/parser/: __init__.py  ast.py  parser.py
src/recheck/recall/: __init__.py
src/recheck/unicode/: __init__.py  ichar.py  icharset.py
src/recheck/vm/: __init__.py  builder.py  inst.py  interpreter.py  program.py
src/redoctor/: checker.py  config.py
src/redoctor/automaton/: checker.py  complexity_analyzer.py  nfa.py  ordered_nfa.py  scc_checker.py
src/redoctor/parser/: ast.py
tests/: __init__.py  conftest.py  test_automaton.py  test_automaton_extended.py  test_checker.py  test_checker_extended.py  test_config.py  test_coverage_boost.py  test_diagnostics.py  test_diagnostics_extended.py  test_fuzz.py  test_fuzz_extended.py  test_integrations.py  test_integrations_extended.py  test_parser.py  test_parser_extended.py  test_recall.py  test_recall_extended.py  test_recheck_alignment.py  test_recheck_automaton_suite.py  test_recheck_compatibility.py  test_recheck_exact_behavior.py  test_recheck_full_suite.py  test_regressions.py  test_unicode.py  test_unicode_extended.py  test_vm.py  test_vm_extended.py
